@@ -1,0 +1,50 @@
+use strict;
+use warnings;
+
+use Test::More 0.88;
+
+use Test::Requires {
+    'Test::Output' => '0.16',
+};
+
+{
+    package Foo;
+
+    our $VERSION = '0.03';
+
+    use Exporter qw( import );
+
+    our @EXPORT_OK = qw( exported );
+
+    use Package::DeprecationManager -deprecations => {
+        'Foo::foo' => '0.02',
+    };
+
+    sub foo {
+        deprecated();
+    }
+
+    sub exported {
+        return 'exported';
+    }
+}
+
+{
+    package Bar;
+
+    Foo->import( 'exported', -api_version => '0.01' );
+
+    ::stderr_is(
+        sub { Foo::foo() },
+        q{},
+        'no warning for foo with api_version = 0.01'
+    );
+
+    ::is(
+        exported(),
+        'exported',
+        'sub exported by Foo was imported and work as expected'
+    );
+}
+
+done_testing();
